--- a/add.html
+++ b/add.html
@@ -7,6 +7,6 @@
     <title>saty</title>
 </head>
 <body>
-    <p>this is my first time using gitbash</p>
+    <p>this is my first time using gitbash file</p>
 </body>
 </html>
